<?xml version="1.0"?>
<package>
  <name>hokuyo_msgs</name>
  <version>0.3.0</version>
  <description>Messages for hokuyo_3d package</description>

  <author email="hln0001@mix.wvu.edu">Hayden Nichols</author>

  <maintainer email="hln0001@mix.wvu.edu">Hayden Nichols</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
